--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.1",
-    "@actions/exec": "^1.1.0"
+    "node-fetch": "^3.3.2"
   },
   "engines": {
     "node": ">=20.0.0"
