--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
   "scripts": {
     "start": "node index.js"
   },
-  "keywords": ["github", "action", "gokakashi", "security", "docker"],
+  "keywords": [
+    "github",
+    "action",
+    "gokakashi",
+    "security",
+    "docker"
+  ],
   "author": "Ashwini Gaddagi",
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.1",
+    "@actions/exec": "^1.1.1",
     "node-fetch": "^3.3.2"
   },
   "engines": {
